feat: Update production and development configurations for Markboard
- Removed .coverage file as it is no longer needed.
- Updated .env-example with production database configuration and JWT secrets.
- Added CI/CD workflow for production deployment using GitHub Actions.
- Modified Dockerfiles for backend and frontend to reflect new image names and configurations.
- Implemented health checks in Dockerfiles for backend and database services.
- Refactored Flask blueprints to remove URL prefixes for cleaner routing.
- Enhanced database connection pooling with retry logic in db.py.
- Updated seed_data.py to provide clearer output for development and production setups.
- Reorganized docker-compose files to streamline service definitions and improve clarity.
- Added init.sql for database schema creation and sample data insertion.
- Removed outdated pytest.ini and run_tests.sh scripts.
- Updated frontend configurations to use new ports and health checks.

--- a/.env-example
+++ b/.env-example
@@ -1,27 +1,25 @@
-# Database Configuration
-MYSQL_HOST=localhost
+# Production Database Configuration for Azure
+MYSQL_HOST=markboard-database
 MYSQL_PORT=3306
-MYSQL_ROOT_PASSWORD=root
-MYSQL_USER=user
-MYSQL_PASSWORD=password
+MYSQL_ROOT_PASSWORD=MarkboardRoot@2024!
+MYSQL_USER=admin
+MYSQL_PASSWORD=MarkboardAdmin@2024!
 MYSQL_DATABASE=markboard
 
-# JWT Configuration (CRITICAL: Change these in production!)
-JWT_SECRET=your_jwt_secret
+# JWT Configuration
+JWT_SECRET=MarkboardJWT$ecure2024!VeryL0ngAndR@ndom
 JWT_EXPIRY_HOURS=24
 
 # Flask Configuration
-FLASK_ENV=development
-DEBUG=True
+FLASK_ENV=production
+DEBUG=false
 
 # Security
 BCRYPT_ROUNDS=12
 
-# Domain Configuration (for external nginx proxy)
-DOMAIN=localhost
-VITE_API_URL=http://localhost:80/api
+# Domain Configuration for Azure
+VITE_API_URL=https://markboard-backend.azurecontainerapps.io
 
 # Admin user credentials for seeding
-# These will be used only for production setup, to change development admin user, edit docker-compose.dev.yml
-ADMIN_EMAIL=admin@email.com
-ADMIN_PASSWORD=adminpassword
+ADMIN_EMAIL=admin@markboard.com
+ADMIN_PASSWORD=MarkboardAdmin@2024!
