--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,6 +1,6 @@
 server {
-    listen 80;
-    server_name markboard.shadowlabs.cc;
+    listen 3000;
+    server_name _;
 
     # Serve the React app
     root /usr/share/nginx/html;
@@ -13,7 +13,7 @@ server {
 
     # Proxy API requests to the backend
     location /api/ {
-        proxy_pass http://markboard-backend:8000/;
+        proxy_pass http://backend:8000/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -21,11 +21,19 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_cache_bypass $http_upgrade;
     }
 
-    # Health check endpoint
+    # Health check endpoint for container health checks
     location /health {
-        proxy_pass http://markboard-backend:8000/health;
+        access_log off;
+        return 200 "healthy\n";
+        add_header Content-Type text/plain;
+    }
+
+    # Backend health check endpoint
+    location /backend-health {
+        proxy_pass http://backend:8000/health;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         access_log off;
