feat: Update frontend Nginx configuration to use new API URL and remove proxy settings

--- a/.github/workflows/deploy-acr.yml
+++ b/.github/workflows/deploy-acr.yml
@@ -120,7 +120,7 @@ jobs:
           file: ./frontend/Dockerfile
           push: true
           build-args: |
-            VITE_API_URL=http://backend:8000/api
+            VITE_API_URL=https://markboard-backend.azurecontainerapps.io/api
           tags: |
             ${{ env.ACR_LOGIN_SERVER }}/${{ env.FRONTEND_IMAGE_NAME }}:${{ github.sha }}
             ${{ env.ACR_LOGIN_SERVER }}/${{ env.FRONTEND_IMAGE_NAME }}:latest
