--- a/.github/workflows/deploy-acr.yml
+++ b/.github/workflows/deploy-acr.yml
@@ -1,6 +1,7 @@
-# Build, Test and Deploy to Azure Container Registry and Container Apps
+# Build, Test and Push to Azure Container Registry
+# Azure Container Apps will automatically deploy new images via continuous deployment
 
-name: Deploy to Azure
+name: Build and Push to ACR
 
 on:
   push:
@@ -12,12 +13,6 @@ env:
   BACKEND_IMAGE_NAME: markboard-backend
   FRONTEND_IMAGE_NAME: markboard-frontend
   DB_IMAGE_NAME: markboard-db
-  CONTAINER_APP_ENVIRONMENT: markboard
-  BACKEND_CONTAINER_APP: markboard-backend
-  FRONTEND_CONTAINER_APP: markboard-frontend
-  DB_CONTAINER_APP: markboard-db
-  RESOURCE_GROUP: BCSAI2025-DEVOPS-STUDENTS-A
-  LOCATION: westeurope
 
 permissions:
   contents: read
@@ -143,50 +138,39 @@ jobs:
     name: Deploy to Azure Container Apps
     runs-on: ubuntu-latest
     needs: build
-    environment:
-      name: 'Production'
 
     steps:
       - name: Log in to Azure
-        uses: azure/login@v1
+        uses: azure/login@v2
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
-          enable-AzPSSession: false
 
-      - name: Deploy database container app
-        uses: azure/CLI@v1
+      - name: Deploy backend container
+        uses: azure/container-apps-deploy-action@v1
         with:
-          inlineScript: |
-            echo "Updating database container app..."
-            az containerapp update \
-              --name ${{ env.DB_CONTAINER_APP }} \
-              --resource-group ${{ env.RESOURCE_GROUP }} \
-              --image ${{ env.ACR_LOGIN_SERVER }}/${{ env.DB_IMAGE_NAME }}:${{ github.sha }}
+          resourceGroup: BCSAI2025-DEVOPS-STUDENTS-A
+          containerAppName: markboard-backend
+          acrName: markboard
+          acrUsername: ${{ secrets.ACR_USERNAME }}
+          acrPassword: ${{ secrets.ACR_PASSWORD }}
+          imageToDeploy: ${{ env.ACR_LOGIN_SERVER }}/${{ env.BACKEND_IMAGE_NAME }}:${{ github.sha }}
 
-      - name: Deploy backend container app
-        uses: azure/CLI@v1
+      - name: Deploy frontend container
+        uses: azure/container-apps-deploy-action@v1
         with:
-          inlineScript: |
-            echo "Updating backend container app..."
-            az containerapp update \
-              --name ${{ env.BACKEND_CONTAINER_APP }} \
-              --resource-group ${{ env.RESOURCE_GROUP }} \
-              --image ${{ env.ACR_LOGIN_SERVER }}/${{ env.BACKEND_IMAGE_NAME }}:${{ github.sha }}
+          resourceGroup: BCSAI2025-DEVOPS-STUDENTS-A
+          containerAppName: markboard-frontend
+          acrName: markboard
+          acrUsername: ${{ secrets.ACR_USERNAME }}
+          acrPassword: ${{ secrets.ACR_PASSWORD }}
+          imageToDeploy: ${{ env.ACR_LOGIN_SERVER }}/${{ env.FRONTEND_IMAGE_NAME }}:${{ github.sha }}
 
-      - name: Deploy frontend container app
-        uses: azure/CLI@v1
+      - name: Deploy database container
+        uses: azure/container-apps-deploy-action@v1
         with:
-          inlineScript: |
-            echo "Updating frontend container app..."
-            az containerapp update \
-              --name ${{ env.FRONTEND_CONTAINER_APP }} \
-              --resource-group ${{ env.RESOURCE_GROUP }} \
-              --image ${{ env.ACR_LOGIN_SERVER }}/${{ env.FRONTEND_IMAGE_NAME }}:${{ github.sha }}
-
-      - name: Output application URLs
-        uses: azure/CLI@v1
-        with:
-          inlineScript: |
-            echo "=== Deployment Complete ==="
-            echo "Frontend URL: https://$(az containerapp show --name ${{ env.FRONTEND_CONTAINER_APP }} --resource-group ${{ env.RESOURCE_GROUP }} --query properties.configuration.ingress.fqdn --output tsv)"
-            echo "Backend URL: https://$(az containerapp show --name ${{ env.BACKEND_CONTAINER_APP }} --resource-group ${{ env.RESOURCE_GROUP }} --query properties.configuration.ingress.fqdn --output tsv)"
+          resourceGroup: BCSAI2025-DEVOPS-STUDENTS-A
+          containerAppName: markboard-db
+          acrName: markboard
+          acrUsername: ${{ secrets.ACR_USERNAME }}
+          acrPassword: ${{ secrets.ACR_PASSWORD }}
+          imageToDeploy: ${{ env.ACR_LOGIN_SERVER }}/${{ env.DB_IMAGE_NAME }}:${{ github.sha }}
