--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -11,7 +11,12 @@ server {
         try_files $uri /index.html;
     }
 
-    # Health check endpoint for container health checks
+    # Add CORS headers
+    add_header Access-Control-Allow-Origin *;
+    add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, DELETE, PUT";
+    add_header Access-Control-Allow-Headers "Authorization, Content-Type";
+
+    # Health check endpoint
     location /health {
         access_log off;
         return 200 "healthy\n";
