--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -6,6 +6,15 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
+    # Proxy API requests to the backend
+    location /api/ {
+        proxy_pass https://markboard-backend.azurecontainerapps.io/api/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
     # Handle client-side routing
     location / {
         try_files $uri /index.html;
