--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -8,7 +8,7 @@ server {
 
     # Proxy API requests to the backend
     location /api/ {
-        proxy_pass https://markboard-backend.internal.greenforest-6e0e7fc1.westeurope.azurecontainerapps.io;
+        proxy_pass http://markboard-backend/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
